Fix nav bar covering section headers

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ html {
 } /* for scrolling */
 
 section {
-    scroll-margin-top: 20px;
+    scroll-margin-top: 80px;
 }/* for scrolling */
 
 .intro {
